fix learn more cta alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -1222,3 +1222,10 @@ background: #34375c;
     }
  }
 }
+
+@media (min-width: 992px) {
+  .col-md-3 {
+    width: 100%;
+  }	
+
+}
